ERROR.log
Traceback (most recent call last):
  File "D:\PYTHON\Kivy\kivyproject\main.py", line 30, in <module>
    KivyMDApp().run()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\app.py", line 950, in run
    runTouchApp()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\base.py", line 582, in runTouchApp
    EventLoop.mainloop()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\base.py", line 347, in mainloop
    self.idle()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\base.py", line 391, in idle
    self.dispatch_input()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\base.py", line 342, in dispatch_input
    post_dispatch_input(*pop(0))
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\base.py", line 248, in post_dispatch_input
    listener.dispatch('on_motion', etype, me)
  File "kivy\_event.pyx", line 709, in kivy._event.EventDispatcher.dispatch
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\core\window\__init__.py", line 1412, in on_motion
    self.dispatch('on_touch_down', me)
  File "kivy\_event.pyx", line 709, in kivy._event.EventDispatcher.dispatch
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\core\window\__init__.py", line 1428, in on_touch_down
    if w.dispatch('on_touch_down', touch):
  File "kivy\_event.pyx", line 709, in kivy._event.EventDispatcher.dispatch
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\uix\screenmanager.py", line 1199, in on_touch_down
    return super(ScreenManager, self).on_touch_down(touch)
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\uix\widget.py", line 545, in on_touch_down
    if child.dispatch('on_touch_down', touch):
  File "kivy\_event.pyx", line 709, in kivy._event.EventDispatcher.dispatch
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\uix\relativelayout.py", line 297, in on_touch_down
    ret = super(RelativeLayout, self).on_touch_down(touch)
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\uix\widget.py", line 545, in on_touch_down
    if child.dispatch('on_touch_down', touch):
  File "kivy\_event.pyx", line 709, in kivy._event.EventDispatcher.dispatch
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivymd\uix\behaviors\ripple_behavior.py", line 255, in on_touch_down
    super().on_touch_down(touch)
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\uix\behaviors\button.py", line 138, in on_touch_down
    if super(ButtonBehavior, self).on_touch_down(touch):
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\uix\widget.py", line 545, in on_touch_down
    if child.dispatch('on_touch_down', touch):
  File "kivy\_event.pyx", line 709, in kivy._event.EventDispatcher.dispatch
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\uix\widget.py", line 545, in on_touch_down
    if child.dispatch('on_touch_down', touch):
  File "kivy\_event.pyx", line 709, in kivy._event.EventDispatcher.dispatch
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivymd\uix\behaviors\ripple_behavior.py", line 255, in on_touch_down
    super().on_touch_down(touch)
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivymd\uix\button.py", line 969, in on_touch_down
    return super().on_touch_down(touch)
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\uix\behaviors\button.py", line 151, in on_touch_down
    self.dispatch('on_press')
  File "kivy\_event.pyx", line 705, in kivy._event.EventDispatcher.dispatch
  File "kivy\_event.pyx", line 1248, in kivy._event.EventObservers.dispatch
  File "kivy\_event.pyx", line 1132, in kivy._event.EventObservers._dispatch
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\lang\builder.py", line 57, in custom_callback
    exec(__kvlang__.co_value, idmap)
  File "D:\PYTHON\Kivy\kivyproject\libs\uix\kv\authority_screen.kv", line 414, in <module>
    on_press: root.validate_account()
  File "D:\PYTHON\Kivy\kivyproject\libs\uix\baseclass\authority_screen.py", line 179, in validate_account
    self.parent.parent.do_login(
  File "D:\PYTHON\Kivy\kivyproject\libs\uix\baseclass\authority_screen.py", line 115, in do_login
    self.manager.set_current("salesstaff", side="right")
  File "D:\PYTHON\Kivy\kivyproject\libs\uix\root.py", line 31, in set_current
    exec(screen["import"])
  File "<string>", line 1, in <module>
  File "D:\PYTHON\Kivy\kivyproject\libs\uix\baseclass\salestaff_screen.py", line 10, in <module>
    from libs.uix.components.profile_preview_dialog import ProfilePreview
  File "D:\PYTHON\Kivy\kivyproject\libs\uix\components\profile_preview_dialog.py", line 6, in <module>
    Builder.load_string(
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\lang\builder.py", line 373, in load_string
    parser = Parser(content=string, filename=fn)
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\lang\parser.py", line 402, in __init__
    self.parse(content)
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\lang\parser.py", line 515, in parse
    rule.precompile()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\lang\parser.py", line 264, in precompile
    x.precompile()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\lang\parser.py", line 260, in precompile
    x.precompile()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\lang\parser.py", line 187, in precompile
    self.co_value = compile(value, self.ctx.filename or '<string>', mode)
  File "<string>", line 31
    app.theme_cls.
                 ^
SyntaxError: unexpected EOF while parsing
